# unified-range

./: .gitignore  .travis.yml  LICENSE  MANIFEST  Pipfile  README.md  catalog-info.yaml  pyproject.toml  requirements.txt  setup.py  tests.py
.circleci/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md
tests/: test_api.py  test_filter_versions.py  test_inter.py  test_merge_versions.py  test_utils.py
tests/test_data/: expected-semver-ranges-comma-separated.txt  expected-semver-ranges.txt  expected-unified-ranges.txt  semver-ranges.txt  unified-ranges.txt
unified_range/: api.py  models.py  utils.py
